--- a/index_1.html
+++ b/index_1.html
@@ -141,8 +141,8 @@
             <h2 class="text-3xl text-white font-bold mb-8">Planos</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold mb-2">Mensal</h3>
-                    <p class="text-lg text-gray-700 mb-4">R$ 14,90</p>
+                    <h3 class="text-xl font-bold mb-2">3 Meses</h3>
+                    <p class="text-lg text-gray-700 mb-4">R$ 39,90</p>
                     <p class="text-gray-600 mb-4">Pra começar</p>
                     <a href="https://wa.me/32991144887"
                         class="bg-orange-500 text-white px-6 py-2 rounded-lg font-semibold hover:bg-lime-500 transition duration-300">Assine
@@ -157,7 +157,7 @@
                         agora</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold mb-2">1 ano</h3>
+                    <h3 class="text-xl font-bold mb-2">12 Meses</h3>
                     <p class="text-lg text-gray-700 mb-4">R$ 79,90</p>
                     <p class="text-gray-600 mb-4">O mais econômico</p>
                     <a href="https://wa.me/32991144887"
